@@ -35,13 +35,7 @@ print_cc_version
 # later warnings in the same matrix subset trigger an error.
 
 case `cc_id`/`os_id` in
-clang-*/SunOS-5.11)
-    # (Clang 9 on OpenIndiana, Clang 11 on OmniOS)
-    # tcpdump.c:2312:51: warning: this function declaration is not a prototype
-    #   [-Wstrict-prototypes]
-    # tcpdump.c:2737:11: warning: this function declaration is not a prototype
-    #   [-Wstrict-prototypes]
-    [ "`uname -o`" = illumos ] && TCPDUMP_TAINTED=yes
+*)
     ;;
 suncc-5.1[45]/SunOS-5.11)
     # Various E_STATEMENT_NOT_REACHED and E_DEPRECATED_ATT warnings.
